More babysteps towards a good layout and interaction of the settings

--- a/src/app/components/generic/book-configuration/book-configuration.component.scss
+++ b/src/app/components/generic/book-configuration/book-configuration.component.scss
@@ -1,5 +1,9 @@
 @import "../../../../gurpsy-material-theme";
 
+.bookConfigHeader md-icon {
+  font-size: 20px;
+}
+
 md-select {
   width: 100%;
 }
