--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -5,6 +5,8 @@
   (changeBookConfiguration)="onChangeBookConfiguration(book)"
   (deleteBookConfiguration)="onDeleteBookConfiguration(book)">
 </gurpsy-book-configuration>
-<button md-icon-button (click)="onNewBookConfiguration()">
-  <md-icon>playlist_add</md-icon>
-</button>
+<div class="addBookConfiguration">
+  <button md-icon-button (click)="onNewBookConfiguration()">
+    <md-icon>playlist_add</md-icon>
+  </button>
+</div>
