--- a/src/app/components/generic/book-configuration/book-configuration.component.html
+++ b/src/app/components/generic/book-configuration/book-configuration.component.html
@@ -1,25 +1,35 @@
-<md-select class="flex-item">
-  <md-option *ngFor="let book of availableBooks" [value]="book">
-    {{ 'BOOK.BOOK_' + book | translate }}
-  </md-option>
-</md-select>
-<button md-icon-button (click)="onToggleDetails()">
-  <md-icon>playlist_add</md-icon>
-</button>
-
-<div class="flex-container">
-  <div class="flex-container flex-item">
-    <md-input-container class="flex-item" class="offset">
-      <input mdInput
-             type="number"
-             placeholder="{{'DIALOG.SETTINGS.LIBRARY_SETTINGS.OFFSET'| translate}}"
-             [(ngModel)]="configuration.offset"
-             (change)="onChangeBookConfiguration()">
-    </md-input-container>
-    <button class="flex-item" md-icon-button (click)="onDeleteBookConfiguration()">
-      <md-icon>delete</md-icon>
-    </button>
+<div class="flex-container bookConfigHeader"
+     fxLayout="row"
+     fxLayoutAlign="space-between stretch"
+     fxLayoutWrap="nowrap">
+  <div class="flex-item"
+       fxFlexAlign="center">
+    {{ 'BOOK.BOOK_' + configuration.book | translate }}
   </div>
+  <button
+    md-icon-button
+    class="flex-item"
+    (click)="onToggleDetails()">
+    <md-icon>settings</md-icon>
+  </button>
+</div>
+
+<div class="flex-container" *ngIf=showDetails>
+  <md-select class="flex-item">
+    <md-option *ngFor="let book of availableBooks" [value]="book">
+      {{ 'BOOK.BOOK_' + book | translate }}
+    </md-option>
+  </md-select>
+  <md-input-container class="flex-item" class="offset">
+    <input mdInput
+           type="number"
+           placeholder="{{'DIALOG.SETTINGS.LIBRARY_SETTINGS.OFFSET'| translate}}"
+           [(ngModel)]="configuration.offset"
+           (change)="onChangeBookConfiguration()">
+  </md-input-container>
+  <button class="flex-item" md-icon-button (click)="onDeleteBookConfiguration()">
+    <md-icon>delete</md-icon>
+  </button>
   <md-input-container class="fileLocation">
     <input mdInput placeholder="{{'DIALOG.SETTINGS.LIBRARY_SETTINGS.FILE_LOCATION'| translate}}"
            [(ngModel)]="configuration.file"
