Initial version of a file input component

--- a/src/app/components/generic/book-configuration/book-configuration.component.html
+++ b/src/app/components/generic/book-configuration/book-configuration.component.html
@@ -35,4 +35,9 @@
            [(ngModel)]="configuration.file"
            (change)="onChangeBookConfiguration()">
   </md-input-container>
+
+  <gurpsy-file-input (onFileSelect)="onFileSelect($event)" [accept]="'application/pdf'">
+    <span class="nofiles">Choose file</span>
+    <span class="selected">Files selected</span>
+  </gurpsy-file-input>
 </div>
