Continued work on the book configurations

--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -16,6 +16,9 @@
     <div class="settingsCardHeader">
       {{'DIALOG.SETTINGS.LIBRARY_SETTINGS.HEADER'| translate}}
     </div>
+    <div class="settingsCardBody">
+      {{'DIALOG.SETTINGS.LIBRARY_SETTINGS.BODY'| translate}}
+    </div>
     <gurpsy-references-configuration></gurpsy-references-configuration>
   </md-card>
 
