--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -6,7 +6,7 @@
   (deleteBookConfiguration)="onDeleteBookConfiguration(book)">
 </gurpsy-book-configuration>
 <div class="addBookConfiguration">
-  <button md-icon-button (click)="onNewBookConfiguration()">
-    <md-icon>playlist_add</md-icon>
+  <button  md-raised-button (click)="onNewBookConfiguration()">
+    {{'BOOKS_CONFIGURATION.ADD_BOOK'| translate}}
   </button>
 </div>
