--- a/src/app/components/generic/book-configuration/book-configuration.component.scss
+++ b/src/app/components/generic/book-configuration/book-configuration.component.scss
@@ -7,3 +7,19 @@
 md-select {
   width: 100%;
 }
+
+.fileLocation {
+  margin-right: 6px;
+}
+
+.offset {
+  max-width: 50px;
+}
+
+.details {
+  margin-left: 8px;
+  border-left: lightgray solid 1px;
+  border-bottom: lightgray solid 1px;
+  border-right: lightgray solid 1px;
+  padding: 0px 8px 8px 8px;
+}
