--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.scss
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.scss
@@ -16,6 +16,12 @@ md-dialog-content {
       font-size: smaller;
     }
 
+    .deleteSettings {
+      width: 100%;
+      text-align: right;
+      margin-top: 8px;
+    }
+
   }
   .sheets {
     margin-top: 16px;
