--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -1,7 +1,7 @@
 <gurpsy-book-configuration
   *ngFor="let book of bookConfigurations"
   [configuration]="book"
-  [availableBooks]="getAvailableBooks()"
+  [availableBooks]="availableBooks"
   (changeBookConfiguration)="onChangeBookConfiguration(book)"
   (deleteBookConfiguration)="onDeleteBookConfiguration(book)">
 </gurpsy-book-configuration>
