--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -6,7 +6,10 @@
   (deleteBookConfiguration)="onDeleteBookConfiguration(book)">
 </gurpsy-book-configuration>
 <div class="addBookConfiguration">
-  <button  md-raised-button (click)="onNewBookConfiguration()">
+  <button
+    md-raised-button
+    [disabled]="availableBooks.length == 0"
+    (click)="onNewBookConfiguration()">
     {{'BOOKS_CONFIGURATION.ADD_BOOK'| translate}}
   </button>
 </div>
