Added correct color

--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -38,7 +38,7 @@
       </md-checkbox>
     </div>
     <div class="deleteSettings">
-      <button md-raised-button color="warning" (click)="onDeleteSettings()">
+      <button md-raised-button color="warn" (click)="onDeleteSettings()">
         {{'DIALOG.SETTINGS.DELETE'| translate}}
       </button>
     </div>
