--- a/src/app/components/generic/book-configuration/book-configuration.component.html
+++ b/src/app/components/generic/book-configuration/book-configuration.component.html
@@ -55,8 +55,7 @@
   <button class="flex-item"
           fxFlexAlign="end"
           md-icon-button
-
           (click)="onDeleteBookConfiguration()">
-    <md-icon color="primary">delete_forever</md-icon>
+    <md-icon color="warn">delete_forever</md-icon>
   </button>
 </div>
