Added pagereference for equipment

--- a/src/app/components/sheet/reusable/equipment/equipment.component.html
+++ b/src/app/components/sheet/reusable/equipment/equipment.component.html
@@ -5,6 +5,7 @@
   <div class="sheetComponentBody">
     <div *ngFor="let equipment of sheet.equipments;">
       <div>{{equipment.name}}</div>
+      <gurpsy-page-reference>{{equipment.pageReference}}</gurpsy-page-reference>
     </div>
   </div>
 </div>
