removed the ugly semicolon from the header

--- a/src/app/components/sheet/reusable/lifting-moving/lifting-moving.component.html
+++ b/src/app/components/sheet/reusable/lifting-moving/lifting-moving.component.html
@@ -1,6 +1,6 @@
 <div class="sheetComponent">
   <div class="sheetComponentHeader">
-    {{ 'SHEET.LIFTING_MOVING.LIFTING_MOVING' | translate }}
+    {{ 'SHEET.LIFTING_MOVING.HEADER' | translate }}
   </div>
   <div class="sheetComponentBody flex-container"
        fxLayout="row"
