--- a/src/app/components/generic/books-configuration/books-configuration.component.scss
+++ b/src/app/components/generic/books-configuration/books-configuration.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../gurpsy-material-theme";
+//@import "../../../../gurpsy-material-theme";
 
 .addBookConfiguration {
   width: 100%;
