--- a/src/app/components/sheet/reusable/advantages/advantages.component.scss
+++ b/src/app/components/sheet/reusable/advantages/advantages.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../gurpsy-material-theme";
+//@import "../../../../../gurpsy-material-theme";
 
 .sheetComponent .sheetComponentBody {
   padding: 0px 0px 2px 0px;
