--- a/src/app/components/sheet/reusable/portrait/portrait.component.scss
+++ b/src/app/components/sheet/reusable/portrait/portrait.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../gurpsy-material-theme";
+//@import "../../../../../gurpsy-material-theme";
 
 .portrait {
     height: calc(100% - 8px);
