--- a/src/app/components/dialog/open-sheet-dialog/open-sheet-dialog.component.scss
+++ b/src/app/components/dialog/open-sheet-dialog/open-sheet-dialog.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../gurpsy-material-theme";
+//@import "../../../../gurpsy-material-theme";
 
 md-dialog-content button {
   width: 100%;
