--- a/src/app/components/generic/book-configuration/book-configuration.component.scss
+++ b/src/app/components/generic/book-configuration/book-configuration.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../gurpsy-material-theme";
+//@import "../../../../gurpsy-material-theme";
 
 .bookConfigHeader md-icon {
   font-size: 20px;
