--- a/src/app/components/sheet/reusable/description/description.component.scss
+++ b/src/app/components/sheet/reusable/description/description.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../gurpsy-material-theme";
+//@import "../../../../../gurpsy-material-theme";
 
 .sheetComponent .sheetComponentBody {
   padding-top: 0px;
