--- a/src/app/components/sheet/sheet.component.scss
+++ b/src/app/components/sheet/sheet.component.scss
@@ -1,4 +1,4 @@
-@import "../../../gurpsy-material-theme";
+//@import "../../../gurpsy-material-theme";
 
 .sheetComponent {
   border: black solid 1px;
