--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -1,4 +1,4 @@
-@import "../../../gurpsy-material-theme";
+//@import "../../../gurpsy-material-theme";
 
 .sideNavigation {
   .sideNavigationHeader {
