--- a/src/gurpsy-palette.scss
+++ b/src/gurpsy-palette.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/theming';
+
 $black-87-opacity: rgba(black, 0.87);
 $white-87-opacity: rgba(white, 0.87);
 
@@ -134,32 +136,7 @@ $gurpsy-red: (
   )
 );
 
-// Background palette for day theme.
-$gurpsy-light-theme-background: (
-  status-bar: map_get($gurpsy-green, 300),
-  app-bar: map_get($gurpsy-green, 300),
-  background: map_get($gurpsy-green, 0),
-  hover: map_get($gurpsy-green, 50),
-  card: white,
-  dialog: white,
-  disabled-button: rgba(black, 0.12),
-  raised-button: map_get($gurpsy-green, 100),
-);
-
-// Background palette for night theme.
-$gurpsy-dark-theme-background: (
-  status-bar: black,
-  app-bar: map_get($gurpsy-dark-blue, 500),
-  background: map-get($gurpsy-dark-blue, 800),
-  hover: rgba(white, 0.04),
-  card: map_get($gurpsy-dark-blue, 500),
-  dialog: map_get($gurpsy-dark-blue, 700),
-  disabled-button: rgba(white, 0.12),
-  raised-button: map-get($gurpsy-dark-blue, 900),
-);
-
-// Foreground palette for day theme.
-$gurpsy-light-theme-foreground: (
+$gurpsy-day-theme-foreground: (
   base: black,
   divider: rgba(black, 0.12),
   dividers: rgba(black, 0.12),
@@ -173,8 +150,22 @@ $gurpsy-light-theme-foreground: (
   text: rgba(black, 0.87)
 );
 
-// Foreground palette for night theme.
-$gurpsy-dark-theme-foreground: (
+$gurpsy-day-theme-background: (
+  status-bar: map_get($gurpsy-green, 300),
+  app-bar: map_get($gurpsy-green, 300),
+  background: map_get($gurpsy-green, 0),
+  hover: map_get($gurpsy-green, 50),
+  card: white,
+  dialog: white,
+  disabled-button: rgba(black, 0.12),
+  raised-button: map_get($gurpsy-green, 100),
+  focused-button: rgba(black, 0.12),
+  selected-button: map_get($mat-grey, 300),
+  selected-disabled-button: map_get($mat-grey, 400),
+  disabled-button-toggle: map_get($mat-grey, 200)
+);
+
+$gurpsy-night-theme-foreground: (
   base: white,
   divider: rgba(white, 0.12),
   dividers: rgba(white, 0.12),
@@ -187,3 +178,22 @@ $gurpsy-dark-theme-foreground: (
   icons: white,
   text: white
 );
+
+$gurpsy-night-theme-background: (
+  status-bar: black,
+  app-bar: map_get($gurpsy-dark-blue, 500),
+  background: map-get($gurpsy-dark-blue, 800),
+  hover: rgba(white, 0.04),
+  card: map_get($gurpsy-dark-blue, 500),
+  dialog: map_get($gurpsy-dark-blue, 700),
+  disabled-button: rgba(white, 0.12),
+  raised-button: map-get($gurpsy-dark-blue, 900),
+  focused-button: rgba(black, 0.12),
+  selected-button: map_get($mat-grey, 900),
+  selected-disabled-button: map_get($mat-grey, 800),
+  disabled-button-toggle: map_get($mat-grey, 1000)
+);
+
+
+
+
