Some fiddling with styling the overlay components

--- a/src/app/components/dialog/about-dialog/about-dialog.component.html
+++ b/src/app/components/dialog/about-dialog/about-dialog.component.html
@@ -3,8 +3,8 @@
      fxLayout.xs="column"
      fxLayoutAlign="space-between stretch"
      fxLayoutWrap="nowrap">
-  <div class="flex-item">
-    <img class="gurpsy-face" src="assets/images/gurpsy-face.png">
+  <div class="flex-item gurpsy-face">
+    <md-icon svgIcon="gurpsy-face"></md-icon>
   </div>
   <div class="flex-item flex-container"
        fxLayout="column">
