--- a/src/app/components/dialog/about-dialog/about-dialog.component.scss
+++ b/src/app/components/dialog/about-dialog/about-dialog.component.scss
@@ -1,7 +1,15 @@
-//@import "../../../../gurpsy-material-theme";
-
 .gurpsy-face {
   height: 120px;
+
+  md-icon {
+    width: 120px;
+    height: 120px;
+
+    svg {
+      width: 120px;
+      height: 120px;
+    }
+  }
 }
 
 .about {
