--- a/src/gurpsy-material-theme.scss
+++ b/src/gurpsy-material-theme.scss
@@ -1,6 +1,7 @@
 @import '~@angular/material/theming';
 @import 'gurpsy-palette';
 @import "app/components/dialog/about-dialog/about-dialog.component";
+@import "app/components/dialog/settings-dialog/settings-dialog.component";
 @import "app/components/sheet/sheet.component";
 @import "app/gurpsy.component";
 
@@ -33,6 +34,7 @@
 
   @include gurpsy-about-dialog-theme($theme);
   @include gurpsy-component-theme($theme);
+  @include gurpsy-settings-dialog-theme($theme);
   @include gurpsy-sheet-theme($theme);
 }
 
