--- a/src/gurpsy-material-theme.scss
+++ b/src/gurpsy-material-theme.scss
@@ -1,7 +1,8 @@
 @import '~@angular/material/theming';
 @import 'gurpsy-palette';
+@import "app/components/dialog/dialog.component";
 @import "app/components/dialog/about-dialog/about-dialog.component";
-@import "app/components/dialog/settings-dialog/settings-dialog.component";
+@import "app/components/dialog/open-sheet-dialog/open-sheet-dialog.component";
 @import "app/components/sheet/sheet.component";
 @import "app/gurpsy.component";
 
@@ -34,7 +35,8 @@
 
   @include gurpsy-about-dialog-theme($theme);
   @include gurpsy-component-theme($theme);
-  @include gurpsy-settings-dialog-theme($theme);
+  @include gurpsy-dialog-theme($theme);
+  @include gurpsy-open-sheet-dialog-theme($theme);
   @include gurpsy-sheet-theme($theme);
 }
 
