--- a/src/app/components/dialog/about-dialog/about-dialog.component.html
+++ b/src/app/components/dialog/about-dialog/about-dialog.component.html
@@ -20,5 +20,5 @@
 </md-dialog-content>
 
 <md-dialog-actions align="end">
-  <button md-button md-dialog-close> {{'DIALOG.CLOSE'| translate}}</button>
+  <button md-button color="primary" md-dialog-close> {{'DIALOG.CLOSE'| translate}}</button>
 </md-dialog-actions>
