--- a/src/app/components/dialog/dice-dialog/dice-dialog.component.html
+++ b/src/app/components/dialog/dice-dialog/dice-dialog.component.html
@@ -7,5 +7,5 @@
 
 <md-dialog-actions align="end">
   <button md-button color="primary" (click)="onRethrow()"> {{'DIALOG.DICE.RETHROW'| translate}}</button>
-  <button md-button md-dialog-close> {{'DIALOG.CLOSE'| translate}}</button>
+  <button md-button color="primary" md-dialog-close> {{'DIALOG.CLOSE'| translate}}</button>
 </md-dialog-actions>
