--- a/src/app/components/dialog/open-sheet-dialog/open-sheet-dialog.component.scss
+++ b/src/app/components/dialog/open-sheet-dialog/open-sheet-dialog.component.scss
@@ -1,7 +1,9 @@
 md-dialog-content {
   md-card {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    gurpsy-file-input {
+      padding-left: 12px;
+      margin-top: 4px;
+    }
   }
 
   button {
