--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -60,6 +60,9 @@
       </md-checkbox>
     </div>
     <div class="deleteSettings">
+      <button md-raised-button color="warn" (click)="onKillSettings()">
+        {{'DIALOG.SETTINGS.KILL'| translate}}
+      </button>
       <button md-raised-button color="warn" (click)="onDeleteSettings()">
         {{'DIALOG.SETTINGS.DELETE'| translate}}
       </button>
