Refactoring and tweaking the SettingsDialog

--- a/src/app/components/dialog/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialog/settings-dialog/settings-dialog.component.html
@@ -71,6 +71,5 @@
 </md-dialog-content>
 
 <md-dialog-actions align="end">
-  <button md-button color="primary" (click)="onPersistSettings()"> {{'DIALOG.OK'| translate}}</button>
-  <button md-button color="primary" md-dialog-close> {{'DIALOG.CANCEL'| translate}}</button>
+  <button md-button color="primary" md-dialog-close> {{'DIALOG.CLOSE'| translate}}</button>
 </md-dialog-actions>
