Improved layout of the book congifurations

--- a/src/app/components/generic/book-configuration/book-configuration.component.html
+++ b/src/app/components/generic/book-configuration/book-configuration.component.html
@@ -17,19 +17,33 @@
      fxLayout="column"
      fxLayoutAlign="space-between stretch"
      fxLayoutWrap="nowrap"
+     fxLayoutGap="4px"
      *ngIf=showDetails>
-  <md-select
-    class="flex-item"
-    fxFlex="100%"
-    (change)="onChangeBookConfiguration()"
-    [(ngModel)]="configuration.book">
-    <md-option *ngIf="configuration.book > -1" [value]="configuration.book">
-      {{ 'BOOK.BOOK_' + configuration.book | translate }}
-    </md-option>
-    <md-option *ngFor="let book of availableBooks" [value]="book">
-      {{ 'BOOK.BOOK_' + book | translate }}
-    </md-option>
-  </md-select>
+  <div
+    class="flex-container flex-item"
+    fxLayout="row"
+    fxLayoutAlign="space-between stretch"
+    fxLayoutWrap="nowrap">
+    <md-select
+      class="flex-item"
+      fxFlex="100%"
+      (change)="onChangeBookConfiguration()"
+      [(ngModel)]="configuration.book">
+      <md-option *ngIf="configuration.book > -1" [value]="configuration.book">
+        {{ 'BOOK.BOOK_' + configuration.book | translate }}
+      </md-option>
+      <md-option *ngFor="let book of availableBooks" [value]="book">
+        {{ 'BOOK.BOOK_' + book | translate }}
+      </md-option>
+    </md-select>
+    <button class="flex-item"
+            fxFlexAlign="end"
+            (focusout)="focusOutFunction()"
+            md-icon-button
+            (click)="onDeleteBookConfiguration()">
+      <md-icon color="{{deleteEnabled? 'warn': 'primary'}}">delete_forever</md-icon>
+    </button>
+  </div>
   <div
     class="flex-container"
     fxLayout="row"
@@ -52,10 +66,5 @@
              (change)="onChangeBookConfiguration()">
     </md-input-container>
   </div>
-  <button class="flex-item"
-          fxFlexAlign="end"
-          md-icon-button
-          (click)="onDeleteBookConfiguration()">
-    <md-icon color="warn">delete_forever</md-icon>
-  </button>
+
 </div>
