--- a/src/app/components/generic/book-configuration/book-configuration.component.scss
+++ b/src/app/components/generic/book-configuration/book-configuration.component.scss
@@ -1,11 +1,10 @@
-//@import "../../../../gurpsy-material-theme";
-
 .bookConfigHeader md-icon {
   font-size: 20px;
 }
 
 md-select {
   width: 100%;
+  padding-right: 8px;
 }
 
 .fileLocation {
