--- a/src/app/components/generic/books-configuration/books-configuration.component.html
+++ b/src/app/components/generic/books-configuration/books-configuration.component.html
@@ -8,6 +8,7 @@
 <div class="addBookConfiguration">
   <button
     md-raised-button
+    color="primary"
     [disabled]="availableBooks.length == 0"
     (click)="onNewBookConfiguration()">
     {{'BOOKS_CONFIGURATION.ADD_BOOK'| translate}}
